feat: allow editing recurring expenses
